syntax = "proto3";
package raftpb;

option go_package = "kv/pkg/raftpb";

message LogEntry {
  int32 index = 1;
  int32 term = 2;
  bytes command = 3;
}

message PersistentState {
  int32 current_term = 1;
  int32 vote_for = 2;
  repeated LogEntry logs = 3;
}

// 新增：Raft RPC 消息
message RequestVoteArgs {
  int32 term = 1;
  int32 candidate_id = 2;
  int32 last_log_index = 3;
  int32 last_log_term = 4;
}
message RequestVoteReply {
  int32 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesArgs {
  int32 term = 1;
  int32 leader_id = 2;
  int32 prev_log_index = 3;
  int32 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int32 leader_commit = 6;
}
message AppendEntriesReply {
  int32 term = 1;
  bool success = 2;
  int32 x_term = 3;
  int32 x_index = 4;
  int32 x_len = 5;
}

message InstallSnapshotArgs {
  int32 term = 1;
  int32 leader_id = 2;
  int32 last_included_index = 3;
  int32 last_included_term = 4;
  bytes data = 5;
}
message InstallSnapshotReply {
  int32 term = 1;
}

// 新增：Raft gRPC 服务
service RaftService {
  rpc RequestVote(RequestVoteArgs) returns (RequestVoteReply);
  rpc AppendEntries(AppendEntriesArgs) returns (AppendEntriesReply);
  rpc InstallSnapshot(InstallSnapshotArgs) returns (InstallSnapshotReply);
}